<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="2dp"
    android:padding="5dp"
    android:id="@+id/pullsContent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTittlePull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/title_pull_request"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtBodyPull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:maxLines="3"
            android:text="@string/body_pull_request"/>

        <TextView
            android:id="@+id/txtDatePull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:text="@string/date_pull_request"
            android:textStyle="italic"
            android:textSize="11sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgPullUser"
                android:layout_width="35dp"
                android:layout_height="35dp"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/avatar_pulls_user" />

            <TextView
                android:id="@+id/txtPullUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:text="@string/username"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
