<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pullsContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:backgroundTint="@color/white_signal"
    android:padding="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTittlePull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/title_pull_request"
            android:textColor="@color/github_background"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBodyPull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:maxLines="3"
            android:text="@string/body_pull_request"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgPullUser"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/avatar_pulls_user"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtPullUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:text="@string/username"
                android:textColor="@color/github_background"
                android:textSize="11sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtPullStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/stylo_border_pull_status"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/pulls_status_close"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_close" />

        <TextView
            android:id="@+id/txtDatePull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="5dp"
            android:text="@string/date_pull_request"
            android:textSize="11sp"
            android:textStyle="italic" />

    </LinearLayout>
</androidx.cardview.widget.CardView>