<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:backgroundTint="@color/white_signal"
    app:cardCornerRadius="@dimen/dimen_10dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/dimen_2dp"
    android:padding="@dimen/dimen_5dp"
    android:id="@+id/pullsContent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTittlePull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="@string/title_pull_request"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_15sp"
            android:textColor="@color/github_background"/>

        <TextView
            android:id="@+id/txtBodyPull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:maxLines="3"
            android:text="@string/body_pull_request"
            android:textSize="@dimen/dimen_12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgPullUser"
                android:layout_width="@dimen/dimen_35dp"
                android:layout_height="@dimen/dimen_35dp"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/avatar_pulls_user"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"/>

            <TextView
                android:id="@+id/txtPullUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:layout_gravity="center_vertical"
                android:text="@string/username"
                android:textSize="@dimen/dimen_11sp"
                android:textStyle="bold"
                android:textColor="@color/github_background"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtPullStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stylo_border_pull_status"
            android:paddingHorizontal="@dimen/dimen_8dp"
            android:paddingVertical="@dimen/dimen_4dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:gravity="center"
            android:text="@string/pulls_status_open"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_11sp"
            app:drawableStartCompat="@drawable/ic_open"/>

        <TextView
            android:id="@+id/txtDatePull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:layout_gravity="end|center_vertical"
            android:text="@string/date_pull_request"
            android:textStyle="italic|bold"
            android:textSize="@dimen/dimen_11sp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
