<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.FragmentPullsBrowser">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul_marino"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iconBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/browser_icon_back"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/iconApp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/browser_icon_toolbar"
            android:src="@drawable/github_mark_white" />

        <TextView
            android:id="@+id/viewTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/browser_title"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </com.google.android.material.appbar.MaterialToolbar>

    <WebView
        android:id="@+id/myBrowser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myToolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>